--- a/Breathe/gradle/libs.versions.toml
+++ b/Breathe/gradle/libs.versions.toml
@@ -1,29 +1,33 @@
 [versions]
-agp = "8.1.0"
-kotlin = "1.9.23"
-composeBom = "2023.10.01"
-coreKtx = "1.12.0"
-appcompat = "1.6.1"
+agp = "8.10.1"
+kotlin = "2.0.21"
+composeBom = "2025.05.01"
+composeCompiler = "2.0.21"
+coreKtx = "1.16.0"
+appcompat = "1.7.0"
 activity = "1.7.2"
 material = "1.12.0"
-material3 = "1.1.2"
+material3 = "1.3.2"
 junit = "4.13.2"
-junitExt = "1.1.5"
-espresso = "3.5.1"
+junitExt = "1.2.1"
+espresso = "3.6.1"
 datastoreCoreAndroid = "1.1.7"
 compiler = "3.2.0-alpha11"
 datastorePreferencesCoreAndroid = "1.1.7"
+navigationCompose = "2.9.0"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "composeCompiler" }
 
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version = "1.7.2" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version = "1.10.1" }
 
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 compose-ui = { module = "androidx.compose.ui:ui" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 compose-tooling = { module = "androidx.compose.ui:ui-tooling-preview" }
