--- a/Breathe/gradle.properties
+++ b/Breathe/gradle.properties
@@ -17,3 +17,10 @@ kotlin.code.style=official
 # ? AndroidX ? ?????????? R-???????
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+
+# gradle.properties
+org.gradle.configuration-cache=true
+kotlin.caching.enabled=true
+
+
+
